@@ -60,3 +60,4 @@ Changes in version 1.5.x
 
 Changes in version 1.7.x
 + makePhyloseqFromTreeSE: added option for choosing a tree from multiple rowTrees
++ mergeSEs: match rows based on all available taxonomy level data on rowData
